2023-02-25  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.*, doc/ja/README.*, gtk/README, etc/main, etc/main.ja,
	  man/mlterm.1: Updated.

2023-02-23  Araki Ken  <arakiken@users.sf.net>

	* README: Updated.

	* config.sub, config.guess: Updated.

	* xdg-shell-unstable-v6-client-protocol.[ch],
	  xdg-decoration-unstable-v1-client-protocol.[ch]: Updated.

2023-02-20  Araki Ken  <arakiken@users.sf.net>

	* README: Updated.

	* vt_pty_mosh.cpp:
	  USE_TCP_RECV_FROM_SERVER (mosh-1.4.0 sixel-winsock branch) is defined.

2023-02-19  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java, MLTermPty.java:
	  'int ch' is added to MLTermPty.writeModifiedKey().

	* MLTermPty.c: 'jint ch' is added to arguments of
	  Java_mlterm_MLTermPty_nativeWriteModifiedKey().

2023-02-18  Araki Ken  <arakiken@users.sf.net>

	* vterm.c: VTERM_CHECK_VERSION2 macro is added.

2023-02-13  Araki Ken  <arakiken@users.sf.net>

	* vterm.c:
	  - vterm_output_set_callback() is added.
	  - Garbage in resizing window is fixed.

2023-02-11  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_mosh.cpp: wstring -> std:wstring, min -> std:min

	* configure.in, libptymosh/Makefile.in, terminaldisplayinit.cc:
	  mosh-1.4.0 is supported.

2023-01-29  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_font.c: int parse_xfont_name() -> void parse_xfont_name()

	* README.android, README.mosh: Updated.

	* prepare-gradle.sh: Help message to build with mosh is added.

	* ef_ucs_property.table: Updated to Unicode 15.0.0 (UnicodeData.txt and
	  EastAsianWidth.txt)

2023-01-28  Araki Ken  <arakiken@users.sf.net>

	* README.android: Updated.

	* android/jni/ui.h: Compiling error of XStringToKeysym() is fixed.

	* README.mosh, README.wayland: Updated.

	* uitoolkit/wayland/rescanproto.sh: Added.

2023-01-22  Araki Ken  <arakiken@users.sf.net>

	* tool/mlconfig/Makefile.in: If po/Makefile doesn't exist, make is not
	  executed in po/.

	* configure.in: If $MSGFMT is "no", tool/mlconfig/po/Makefile is not output.
